--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,24 +9,24 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../test.dmg"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
-script_export_mode=2
+script_export_mode=1
 
 [preset.0.options]
 
-export/distribution_type=1
+export/distribution_type=0
 binary_format/architecture="universal"
 custom_template/debug=""
 custom_template/release=""
 debug/export_console_wrapper=1
 application/icon=""
 application/icon_interpolation=4
-application/bundle_identifier=""
-application/signature=""
+application/bundle_identifier="game.kekoponte.com"
+application/signature="kekoponte"
 application/app_category="Games"
 application/short_version=""
 application/version=""
