--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Desktop/test.dmg"
+export_path="../../Desktop/trot.dmg"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
